# chess-tutor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
examples/: demo.py  simulate_conversations.py
src/: __init__.py
src/agents/: __init__.py  tools.py  tutor_orchestrator.py
src/services/: __init__.py  chess_state.py  stockfish_service.py
src/utils/: __init__.py  config.py  prompts.py  schemas.py
